# WIRING_FOR_DUMMIES

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  start.bat
components/: 555-timer.md  7-segment-display.md  addressable-led.md  audio-amplifier.md  battery-charger.md  bluetooth.md  buck-boost-converter.md  buzzer.md  capacitor.md  cellular.md  comparator.md  crystal.md  current-sensor.md  dc-fan.md  dc-motor.md  digital-potentiometer.md  diode.md  ethernet.md  fuse.md  gas-sensor.md  gps.md  h-bridge.md  hall-effect-sensor.md  inductor.md  ir-receiver.md  joystick.md  keypad.md  lcd-display.md  ldr.md  led-driver.md  led.md  load-cell.md  microcontroller.md  microphone.md  moisture-sensor.md  mosfet.md  oled-display.md  op-amp.md  optocoupler.md  piezo-element.md  (+26 more)
fundamentals/: ac-vs-dc.md  analog-vs-digital.md  batteries.md  boost-converter.md  breadboard.md  buck-converter.md  connectors-wire.md  gpio-pins.md  grounding-decoupling.md  level-shifter.md  multimeter.md  ohm-law.md  power-batteries.md  pull-up-pull-down.md  pwm.md  reading-schematics.md  resistor-network.md  serial-communication.md  soldering.md  voltage-divider.md  wireless_technologies.md
projects/: 74hc595-shift-register.md  ds18b20-onewire.md  esp32-fan-controller.md  esp32-web-server.md  hc-sr04-ultrasonic.md  i2c-devices.md  neopixel-ws2812b.md  oled-sensor-readout.md  pir-motion-sensor.md  relay-module.md  stepper-motor-a4988.md
scripts/: find-missing-components.py  split_serve.py
server/: config.py  markdown.py  pages.py  templates.py
