[project]
name = "wiring-for-dummies"
version = "1.0.0"
description = "Plain-English electronics reference library — explains why every wire and part is there"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["electronics", "reference", "tutorial", "wiring", "beginners"]
authors = [{ name = "coff33ninja" }]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []

[project.scripts]
wiring-for-dummies = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
ignore = ["F401", "E501", "E702", "ANN", "D103", "E722", "PLR2004", "RUF001", "C901", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"server/__init__.py" = ["F401", "E402"]
"scripts/*.py" = ["F401", "F541"]
